styles/globals.css
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

/* 
  Note: The styles for this gradient grid background is heavily inspired by the creator of this amazing site (https://dub.sh) – all credits go to them! 
*/

/* Start General styles */

* {
  margin:0;
  padding: 0;
  box-sizing:border-box;
  scroll-behavior: smooth;
}
body {
  overflow-x: hidden;
  position: relative;
  width:100vw !important;
  width: 100%;
  height: 100vh;
  height: 100%;
}



/*Components Container*/

/* Spacing */
.max-width {
  @apply max-w-[1440px] mx-auto;
}
.padding-x {
  @apply sm:px-16 px-6
}
.padding-y{
  @apply py-4
}
.padding {
  @apply sm:px-16 px-6 sm:py-12 py-4
}
.marginX {
  @apply sm:mx-16 mx-6
}
.marginY {
  @apply sm:my-16 my-6
}

.flex-center {
  @apply flex justify-center items-center;
}

.flex-start {
  @apply flex justify-start items-start;
}

.flex-end {
  @apply flex justify-end items-center;
}

.flex-between {
  @apply flex justify-between items-center;
}

/* Text*/
.heading2 {
  @apply font-semibold  xs:text-[48px] text-[40px] text-picton-blue xs:leading-[76.8px] leading-[66.8px] w-full

}
.paragraph {
  @apply  font-normal text-black text-[18px] leading-[30.8px]
}
.info-text {
  @apply font-satoshi text-slate-gray text-lg leading-7;
}
.section_info {
  @apply flex-1 flex-col justify-center flex-start ;
 }
 .sect_head {
  @apply font-semibold text-deluge xs:text-[48px] text-[40px] sm:text-[36px] leading-[48px]  mb-1
 }
 .desc_paragraphs {
  @apply   flex-center text-center mt-2 md:py-4 font-inter  font-normal  text-[18px] md:text-[24px] sm:text-xl leading-[24.8px]  md:leading-[40.8px] px-6; 
 }
 .head_text {
  @apply mt-5 text-5xl font-extrabold leading-[1.15] text-picton-blue sm:text-6xl;
}
.heading-title{
  @apply  text-[1.5rem] leading-none font-medium font-sans text-center lg:text-5xl lg:text-left lg:leading-tight ;
}
.hero__subtitle {
  @apply text-[27px] text-black  mt-5;
}
.desc_center {
  @apply mt-5 font-normal text-[28px]  text-gray-600 sm:text-[22px] leading-[30.8px] max-w-4xl;
}
.banner-paragraphs {
  @apply  font-semibold text-[34] sm:text-[22px] leading-[30.8px] max-w-4xl;
}
.list_text {
   @apply   uppercase font-semibold  text-gray-600 text-[32]  sm:text-[22px] leading-[30.8px] max-w-4xl
}

/* video */
video {
  @apply w-full md:h-[640px] object-cover z-[10]
}
.vid-content{
  @apply absolute w-full h-[540px]  top-0 md:top-[400px] flex flex-col flex-center  py-10 z-[10];
}
.vid-overlay {
  @apply top-[120] left-0 w-full md:h-[640px] bg-black z-[6]
} 

.main {
  width: 100%;
  height: 100vh;
  height: 100svh;
  position: fixed;
  display: flex;
  justify-content: center;
  padding: 120px 24px 160px 24px;
  pointer-events: none;
}

.main:before {
  background: radial-gradient(circle, rgba(2, 0, 36, 0) 0, #fafafa 100%);
  position: absolute;
  content: "";
  z-index: 2;
  width: 100%;
  height: 100%;
  top: 0;
}

.main:after {
  content: "";
  background-image: url("/assets/images/grid.svg");
  z-index: 1;
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  opacity: 0.4;
  filter: invert(1);
}

.gradient {
  height: fit-content;
  z-index: 3;
  width: 100%;
  max-width: 640px;
  background-image: radial-gradient(
      at 27% 37%,
      hsla(215, 98%, 61%, 1) 0px,
      transparent 0%
    ),
    radial-gradient(at 97% 21%, hsla(125, 98%, 72%, 1) 0px, transparent 50%),
    radial-gradient(at 52% 99%, hsla(354, 98%, 61%, 1) 0px, transparent 50%),
    radial-gradient(at 10% 29%, hsla(256, 96%, 67%, 1) 0px, transparent 50%),
    radial-gradient(at 97% 96%, hsla(38, 60%, 74%, 1) 0px, transparent 50%),
    radial-gradient(at 33% 50%, hsla(222, 67%, 73%, 1) 0px, transparent 50%),
    radial-gradient(at 79% 53%, hsla(343, 68%, 79%, 1) 0px, transparent 50%);
  position: absolute;
  content: "";
  width: 100%;
  height: 100%;
  filter: blur(100px) saturate(150%);
  top: 80px;
  opacity: 0.15;
}
.box-shadow {
  box-shadow: 0px 20px 100px -10px rgba(66, 71, 91, 0.1);
}
.app {
  width: 100%;
  height: 100svh;
  flex-direction: column;
  position: relative;
  z-index: 10;
  align-items: center;
  justify-items: center;
  margin: auto;
  display: flex;
}

@media screen and (max-width: 640px) {
  .main {
    padding: 0;
  }
}

/* Tailwind Styles */

/* .app {
  @apply relative z-10 flex justify-center items-center flex-col  mx-auto sm:px-16 px-6 bg-yellow-500
} */
/* navbar */
.nav-links {
  @apply pb-6 text-xl text-white font-medium py-4 md:px-6 text-center border-b-2 md:border-b-0 hover:bg-deluge  hover:border-b-deluge  hover:md:border-b-4 border-white  hover:border-deluge  md:hover:bg-transparent
}


/* Button */
.custom-btn {
  @apply flex flex-row relative justify-center items-center py-4 px-6 outline-none;
}

.black_btn {
  @apply rounded-full border border-black bg-black py-1.5 px-5 text-white transition-all hover:bg-white hover:text-black text-center text-sm font-inter flex items-center justify-center;
}


.outline_btn {
  @apply rounded-full border border-black bg-transparent py-1.5 px-5 text-black transition-all hover:bg-black hover:text-white text-center text-sm font-inter flex items-center justify-center;
}


.head_text_sub {
  @apply mt-5 text-2xl font-extrabold leading-[1.15] text-picton-blue sm:text-3xl;
}

.orange_gradient {
  @apply bg-gradient-to-r from-amber-500 via-orange-600 to-yellow-500 bg-clip-text text-transparent;
}

.green_gradient {
  @apply bg-gradient-to-r from-green-400 to-green-500 bg-clip-text text-transparent;
}

.blue_gradient {
  @apply bg-gradient-to-r from-blue-600 to-cyan-600 bg-clip-text text-transparent;
}



.search_input {
  @apply block w-full rounded-md border border-gray-200 bg-white py-2.5 font-satoshi pl-5 pr-12 text-sm shadow-lg font-medium focus:border-black focus:outline-none focus:ring-0;
}

.copy_btn {
  @apply w-7 h-7 rounded-full bg-white/10 shadow-[inset_10px_-50px_94px_0_rgb(199,199,199,0.2)] backdrop-blur flex justify-center items-center cursor-pointer;
}

.glassmorphism {
  @apply rounded-xl border border-gray-200 bg-white/20 shadow-[inset_10px_-50px_94px_0_rgb(199,199,199,0.2)] backdrop-blur p-5;
}

.prompt_layout {
  @apply space-y-6 py-8 sm:columns-2 sm:gap-6 xl:columns-3;
}

/* Feed Component */
.feed {
  @apply mt-16 mx-auto w-full max-w-xl flex justify-center items-center flex-col gap-2;
}

/* Form Component */
.form_textarea {
  @apply w-full flex rounded-lg h-[200px] mt-2 p-3 text-sm text-gray-500 outline-0;
}

.form_input {
  @apply w-full flex rounded-lg mt-2 p-3 text-sm text-gray-500 outline-0;
}

/* Nav Component */
.logo_text {
  @apply max-sm:hidden font-satoshi font-semibold text-lg text-black tracking-wide;
}

.dropdown {
  @apply absolute right-0 top-full mt-3 w-full p-5 rounded-lg bg-white min-w-[210px] flex flex-col gap-2 justify-end items-end;
}

.dropdown_link {
  @apply text-sm font-inter text-gray-700 hover:text-gray-500 font-medium;
}


/* Hero Component */
.hero {
 @apply flex   xl:flex-row md:flex-row flex-col right-0 left-0  gap-2 relative z-0  mx-auto;
}

.hero__image-container {
 @apply xl:flex-[1.5] flex justify-end items-end w-full xl:h-screen;
}
.hero__image {
  @apply relative xl:w-full w-full xl:h-full h-[590px] z-0;
}
.hero__image-overlay {
  @apply absolute xl:-top-24 xl:-right-1/2 -right-1/4  bg-repeat-round -z-10 w-full xl:h-screen h-[590px] overflow-hidden;
}

/* Banner*/
.banner {
  @apply flex w-full xl:flex-row   relative z-0 max-w-[1440px] min-h-[640px]; 
}
.banner__title{
  @apply 2xl:text-[48px] sm:text-[48px] text-[40px] text-deluge font-extrabold;
}
.banner__subtitle {
  @apply text-[27px] text-picton-blue font-medium mt-5;
}
.banner__image-overlay {
  @apply relative xl:-top-24 xl:-right-1/2 -right-1/4 bg-service-bg bg-no-repeat -z-10 w-full xl:h-screen h-[590px] overflow-hidden;
}


/* Business Component */
.business_container {
  @apply flex md:flex-row flex-col sm:p-16 p-6;
 }
 
 .cta_button{
   @apply py-4 px-6 bg-deluge font-medium text-[18px] text-white outline-none;
 }
 .service_features {
  @apply flex
 }
 
 

/* Stats Component */
.stat{
     @apply flex flex-wrap sm:mb-20 mb-6 flex-center mt-10 flex-center
}
/* Cards */
.feature_card {
  @apply w-[340px];

 }




/*Feedback */
.feature-card:hover {
  background: var(--black-gradient);
  box-shadow: var(--card-shadow);
}

.feedback-container .feedback-card:last-child {
  @apply mr-0;
}

.feedback-card {
 background:deluge;

}

.feedback-card:hover {
   background: var(--black-gradient);
}

/**/

  .service-card {
    @apply flex flex-center flex-wrap flex-col md:flex-row w-full h-full  md:w-[440px] md:h-[350px] ;
    
  }

.core-card {
  @apply   w-full md:w-1/3  md:h-[440px] flex flex-col flex-center;
}


/* PromptCard Component */
.prompt_card {
  @apply flex-1 break-inside-avoid rounded-lg border border-gray-300 bg-white/20 bg-clip-padding p-6 pb-4 backdrop-blur-lg backdrop-filter md:w-[360px] w-full h-fit;
}
/* Footer Component*/
.footer_sect {
  @apply flex-center flex-col w-full 
}

